[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]


[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -157.0
margin_right = 175.0
margin_bottom = 153.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeGame" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 350.0
margin_bottom = 20.0
text = "Resume"

[node name="NewGame" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 50.0
margin_right = 350.0
margin_bottom = 70.0
text = "New Game"

[node name="Quit" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 100.0
margin_right = 350.0
margin_bottom = 120.0
text = "Quit"
[connection signal="button_down" from="ColorRect/VBoxContainer/ResumeGame" to="." method="_on_ResumeGame_button_down"]
[connection signal="button_down" from="ColorRect/VBoxContainer/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="ColorRect/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
